--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,68 @@
+# ============================================================================
 # PixPort Environment Variables Template
-# Copy this file to .env and fill in your values
+# Copy this file to .env and update the values
+# ============================================================================
 
 # Flask Configuration
-SECRET_KEY=your-secret-key-here
-FLASK_ENV=production
+FLASK_ENV=development
+FLASK_DEBUG=True
+SECRET_KEY=your-super-secret-key-change-this-in-production
+
+# Application Settings
+APP_NAME=PixPort
+APP_VERSION=2.0.0
+UPLOAD_MAX_SIZE=16777216
+PORT=5000
 
 # AI Model Configuration
-REMBG_MODEL=u2net
+REMBG_MODEL=u2netp
+SKIP_AI_MODELS=False
 
-# Redis Configuration (optional)
+# Processing Strategy (lightweight_first, ai_first, external_first)
+PROCESSING_STRATEGY=lightweight_first
+
+# Lightweight Processing Settings
+LIGHTWEIGHT_PROCESSING=True
+OPENCV_BACKEND=True
+
+# External API Configuration (Optional)
+# Remove.bg API for professional background removal
+# REMOVEBG_API_KEY=your-remove-bg-api-key
+
+# Memory Management
+# Railway memory optimization
+RAILWAY_MEMORY_LIMIT=512
+WORKER_MEMORY_LIMIT=400
+ENABLE_MEMORY_MONITORING=True
+
+# Rate Limiting
+RATELIMIT_STORAGE_URL=memory://
+
+# File Paths
+UPLOAD_FOLDER=app/static/uploads
+PROCESSED_FOLDER=app/static/processed
+TEMP_FOLDER=app/static/temp
+
+# Development Mode
+DEVELOPMENT_MODE=1
+
+# External Services (Optional)
 # REDIS_URL=redis://localhost:6379
 
-# Railway Environment (automatically set)
+# Logging
+LOG_LEVEL=INFO
+ENABLE_PERFORMANCE_LOGS=False
+
+# Production Settings (Railway/Heroku)
 # RAILWAY_ENVIRONMENT_NAME=production
-# PORT=5000
+# WEB_CONCURRENCY=1
+# PYTHONPATH=/app
+
+# Security
+# Enable HTTPS redirect in production
+# FORCE_HTTPS=True
+# SECURE_HEADERS=True
+
+# Health Monitoring
+HEALTH_CHECK_ENABLED=True
+MEMORY_MONITORING_ENABLED=True
