--- a/.gitignore
+++ b/.gitignore
@@ -340,8 +340,11 @@ IMPLEMENTATION_SUMMARY_backup.*
 
 # Railway Specific
 .railway/
-railway.toml
+# railway.toml  # Keep railway.toml for deployment configuration
 railway_deployment.log
+# nixpacks.toml  # Keep nixpacks.toml for build configuration
+# build.sh      # Keep build.sh for deployment
+requirements-railway.txt  # Exclude alternative requirements
 
 # Memory monitoring and performance
 memory_reports/
@@ -437,4 +440,7 @@ backups/
 
 #UNWANTED FILES
 IMPLEMENTATION_SUMMARY.md
+RAILWAY_DEPLOY_GUIDE.md
 .gitignore_UPDATES.md
+
+requirements-railway.txt
