--- a/railway.toml
+++ b/railway.toml
@@ -17,7 +17,7 @@ PIP_DISABLE_PIP_VERSION_CHECK = "1"
 # Deployment configuration
 healthcheckPath = "/health"
 healthcheckTimeout = 300
-startCommand = "gunicorn -c gunicorn.conf.py app:app"
+startCommand = "gunicorn -c gunicorn.conf.py wsgi:app"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 3
 
