--- a/.gitignore
+++ b/.gitignore
@@ -338,13 +338,24 @@ lazy_loading_example.py
 # But ignore temporary test outputs
 IMPLEMENTATION_SUMMARY_backup.*
 
-# Railway Specific
+# Cloud Deployment Specific
 .railway/
-# railway.toml  # Keep railway.toml for deployment configuration
+.gcp/
+.cloud/
+# Keep Cloud Run deployment files
+!cloudbuild.yaml
+!Dockerfile
+!.dockerignore
+!.gcloudignore
+!.env.cloudrun
+# Exclude old Railway files
+railway.toml
+railway.json
+nixpacks.toml
+Procfile
+runtime.txt
+requirements-railway.txt
 railway_deployment.log
-# nixpacks.toml  # Keep nixpacks.toml for build configuration
-# build.sh      # Keep build.sh for deployment
-requirements-railway.txt  # Exclude alternative requirements
 
 # Memory monitoring and performance
 memory_reports/
