--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,9 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:$COMMIT_SHA'
+      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
       - '-t'
-      - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:latest'
+      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
       - '.'
     id: 'build-image'
 
@@ -14,14 +14,14 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:$COMMIT_SHA'
+      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
     id: 'push-image-sha'
     waitFor: ['build-image']
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:latest'
+      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
     id: 'push-image-latest'
     waitFor: ['build-image']
 
@@ -31,11 +31,11 @@ steps:
     args:
       - 'run'
       - 'deploy'
-      - 'my-flask-service'
+      - 'pixport-app'
       - '--image'
-      - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:$COMMIT_SHA'
+      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
       - '--region'
-      - 'europe-west1'
+      - 'asia-south1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
@@ -71,18 +71,18 @@ options:
 
 # Substitutions (can be overridden)
 substitutions:
-  _REGION: 'europe-west1'
-  _PROJECT_ID: 'my-gcp-project-id'
-  _REPO_NAME: 'my-artifact-repo'
-  _SERVICE_NAME: 'my-flask-service'
+  _REGION: 'asia-south1'
+  _PROJECT_ID: 'pixport-468609'
+  _REPO_NAME: 'pixport-images'
+  _SERVICE_NAME: 'pixport-app'
 
 # Build timeout (increased for first builds with model downloads)
 timeout: '1800s'  # 30 minutes
 
 # Images to be pushed to registry
 images:
-  - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:$COMMIT_SHA'
-  - 'europe-west1-docker.pkg.dev/my-gcp-project-id/my-artifact-repo/my-flask-service:latest'
+  - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
+  - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
 
 # Tags for the build
 tags:
