--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -4,9 +4,9 @@ steps:
     args:
       - 'build'
       - '-t'
-      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
       - '-t'
-      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
+      - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
       - '.'
     id: 'build-image'
 
@@ -14,14 +14,14 @@ steps:
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
     id: 'push-image-sha'
     waitFor: ['build-image']
 
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'push'
-      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
+      - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
     id: 'push-image-latest'
     waitFor: ['build-image']
 
@@ -33,9 +33,9 @@ steps:
       - 'deploy'
       - 'pixport-app'
       - '--image'
-      - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
+      - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
       - '--region'
-      - 'asia-south1'
+      - 'us-central1'
       - '--platform'
       - 'managed'
       - '--allow-unauthenticated'
@@ -71,7 +71,7 @@ options:
 
 # Substitutions (can be overridden)
 substitutions:
-  _REGION: 'asia-south1'
+  _REGION: 'us-central1'
   _PROJECT_ID: 'pixport-468609'
   _REPO_NAME: 'pixport-images'
   _SERVICE_NAME: 'pixport-app'
@@ -81,8 +81,8 @@ timeout: '1800s'  # 30 minutes
 
 # Images to be pushed to registry
 images:
-  - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
-  - 'asia-south1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
+  - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:$COMMIT_SHA'
+  - 'us-central1-docker.pkg.dev/pixport-468609/pixport-images/pixport-app:latest'
 
 # Tags for the build
 tags:
