Update deployment config for Google Cloud Run - Project: pixport-468609

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,19 +42,23 @@ steps:
       - '--port'
       - '8080'
       - '--memory'
-      - '2Gi'
+      - '8Gi'
       - '--cpu'
+      - '4'
+      - '--min-instances'
       - '1'
       - '--max-instances'
-      - '10'
+      - '20'
       - '--concurrency'
-      - '80'
+      - '200'
       - '--timeout'
-      - '300s'
+      - '900s'
+      - '--cpu-boost'
       - '--set-env-vars'
-      - 'FLASK_ENV=production,SECRET_KEY=pixport-cloud-run-secret-key-2024,UPLOAD_FOLDER=/tmp/uploads,PROCESSED_FOLDER=/tmp/processed,REMBG_MODEL=isnet-general-use'
+      - 'FLASK_ENV=production,SECRET_KEY=pixport-cloud-run-secret-key-2024,UPLOAD_FOLDER=/tmp/uploads,PROCESSED_FOLDER=/tmp/processed,REMBG_MODEL=isnet-general-use,SKIP_AI_MODELS=false'
       - '--execution-environment'
       - 'gen2'
+      - '--startup-cpu-boost'
     id: 'deploy-to-cloud-run'
     waitFor: ['push-image-sha', 'push-image-latest']
 
