Update deployment config for Google Cloud Run - Project: pixport-468609

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,23 +42,19 @@ steps:
       - '--port'
       - '8080'
       - '--memory'
-      - '8Gi'
+      - '4Gi'
       - '--cpu'
-      - '4'
-      - '--min-instances'
-      - '1'
+      - '2'
       - '--max-instances'
-      - '20'
+      - '10'
       - '--concurrency'
-      - '200'
+      - '80'
       - '--timeout'
-      - '900s'
-      - '--cpu-boost'
+      - '300s'
       - '--set-env-vars'
-      - 'FLASK_ENV=production,SECRET_KEY=pixport-cloud-run-secret-key-2024,UPLOAD_FOLDER=/tmp/uploads,PROCESSED_FOLDER=/tmp/processed,REMBG_MODEL=isnet-general-use,SKIP_AI_MODELS=false'
+      - 'FLASK_ENV=production,SECRET_KEY=pixport-cloud-run-secret-key-2024,UPLOAD_FOLDER=/tmp/uploads,PROCESSED_FOLDER=/tmp/processed,REMBG_MODEL=isnet-general-use'
       - '--execution-environment'
       - 'gen2'
-      - '--startup-cpu-boost'
     id: 'deploy-to-cloud-run'
     waitFor: ['push-image-sha', 'push-image-latest']
 
