--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,4 +8,4 @@ cmds = ['pip install --no-cache-dir -r requirements.txt']
 cmds = ['echo "Build phase complete"']
 
 [start]
-cmd = 'gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 60 app:app'
+cmd = 'gunicorn --bind 0.0.0.0:$PORT --workers 1 --threads 2 --timeout 60 wsgi:app'
